--- a/backtester_logic/data_preparation.ipynb
+++ b/backtester_logic/data_preparation.ipynb
@@ -448,112 +448,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13258/13258 [3:57:46<00:00,  1.08s/it]  \n",
-      "100%|██████████| 13258/13258 [1:56:26<00:00,  1.90it/s]  \n",
-      "100%|██████████| 13258/13258 [1:58:26<00:00,  1.87it/s]  \n",
-      "100%|██████████| 13258/13258 [2:42:14<00:00,  1.36it/s]  \n",
-      "100%|██████████| 13258/13258 [42:14<00:00,  5.23it/s]  \n",
-      "100%|██████████| 13258/13258 [1:12:50<00:00,  3.03it/s]  \n",
-      "100%|██████████| 13258/13258 [55:49<00:00,  3.96it/s]  \n",
-      "100%|██████████| 13258/13258 [1:12:33<00:00,  3.05it/s]  \n",
-      "100%|██████████| 13258/13258 [22:49<00:00,  9.68it/s] \n",
-      "100%|██████████| 13258/13258 [28:28<00:00,  7.76it/s] \n",
-      "100%|██████████| 13258/13258 [38:20<00:00,  5.76it/s]  \n",
-      "100%|██████████| 13258/13258 [57:43<00:00,  3.83it/s]  \n",
-      "100%|██████████| 13258/13258 [14:34<00:00, 15.16it/s] \n",
-      "100%|██████████| 13258/13258 [20:16<00:00, 10.90it/s] \n",
-      "100%|██████████| 13258/13258 [30:34<00:00,  7.23it/s]  \n",
-      "100%|██████████| 13258/13258 [48:16<00:00,  4.58it/s]  \n",
-      "100%|██████████| 13258/13258 [1:41:38<00:00,  2.17it/s] \n",
-      "100%|██████████| 13258/13258 [1:48:01<00:00,  2.05it/s]  \n",
-      "100%|██████████| 13258/13258 [2:00:04<00:00,  1.84it/s]  \n",
-      "100%|██████████| 13258/13258 [2:20:57<00:00,  1.57it/s]  \n",
-      "100%|██████████| 13258/13258 [1:06:03<00:00,  3.34it/s]\n",
-      "100%|██████████| 13258/13258 [1:22:33<00:00,  2.68it/s]  \n",
-      "100%|██████████| 13258/13258 [1:40:39<00:00,  2.20it/s]  \n",
-      "100%|██████████| 13258/13258 [2:14:24<00:00,  1.64it/s]  \n",
-      "100%|██████████| 13258/13258 [24:43<00:00,  8.93it/s] \n",
-      "100%|██████████| 13258/13258 [28:38<00:00,  7.71it/s] \n",
-      "100%|██████████| 13258/13258 [38:56<00:00,  5.67it/s]  \n",
-      "100%|██████████| 13258/13258 [57:36<00:00,  3.84it/s]  \n",
-      "100%|██████████| 13258/13258 [14:46<00:00, 14.96it/s] \n",
-      "100%|██████████| 13258/13258 [20:33<00:00, 10.75it/s] \n",
-      "100%|██████████| 13258/13258 [31:03<00:00,  7.11it/s]  \n",
-      "100%|██████████| 13258/13258 [49:23<00:00,  4.47it/s]  \n",
-      "100%|██████████| 13258/13258 [1:41:38<00:00,  2.17it/s] \n",
-      "100%|██████████| 13258/13258 [1:51:44<00:00,  1.98it/s]  \n",
-      "100%|██████████| 13258/13258 [2:01:54<00:00,  1.81it/s]  \n",
-      "100%|██████████| 13258/13258 [2:19:54<00:00,  1.58it/s]  \n",
-      "100%|██████████| 13258/13258 [40:17<00:00,  5.48it/s] \n",
-      "100%|██████████| 13258/13258 [46:29<00:00,  4.75it/s]  \n",
-      "100%|██████████| 13258/13258 [58:52<00:00,  3.75it/s]  \n",
-      "100%|██████████| 13258/13258 [1:42:46<00:00,  2.15it/s]  \n",
-      "100%|██████████| 13258/13258 [24:42<00:00,  8.94it/s] \n",
-      "100%|██████████| 13258/13258 [33:30<00:00,  6.59it/s]  \n",
-      "100%|██████████| 13258/13258 [43:39<00:00,  5.06it/s]  \n",
-      "100%|██████████| 13258/13258 [1:02:02<00:00,  3.56it/s]\n",
-      "100%|██████████| 13258/13258 [15:57<00:00, 13.84it/s] \n",
-      "100%|██████████| 13258/13258 [22:17<00:00,  9.91it/s]  \n",
-      "100%|██████████| 13258/13258 [33:21<00:00,  6.63it/s]  \n",
-      "100%|██████████| 13258/13258 [1:23:07<00:00,  2.66it/s]  \n",
-      "100%|██████████| 13258/13258 [2:01:59<00:00,  1.81it/s] \n",
-      "100%|██████████| 13258/13258 [4:22:01<00:00,  1.19s/it]     \n",
-      "100%|██████████| 13258/13258 [2:23:54<00:00,  1.54it/s]  \n",
-      "100%|██████████| 13258/13258 [2:46:20<00:00,  1.33it/s]  \n",
-      "100%|██████████| 13258/13258 [46:57<00:00,  4.71it/s] \n",
-      "100%|██████████| 13258/13258 [54:45<00:00,  4.04it/s]  \n",
-      "100%|██████████| 13258/13258 [1:06:48<00:00,  3.31it/s]  \n",
-      "100%|██████████| 13258/13258 [1:29:32<00:00,  2.47it/s]  \n",
-      "100%|██████████| 13258/13258 [28:05<00:00,  7.86it/s] \n",
-      "100%|██████████| 13258/13258 [1:04:05<00:00,  3.45it/s]  \n",
-      "100%|██████████| 13258/13258 [1:27:43<00:00,  2.52it/s]  \n",
-      "100%|██████████| 13258/13258 [1:46:09<00:00,  2.08it/s]  \n",
-      "100%|██████████| 13258/13258 [33:44<00:00,  6.55it/s]  \n",
-      "100%|██████████| 13258/13258 [52:55<00:00,  4.18it/s]  \n",
-      "100%|██████████| 13258/13258 [56:58<00:00,  3.88it/s]  \n",
-      "100%|██████████| 13258/13258 [1:19:35<00:00,  2.78it/s]  \n",
-      "100%|██████████| 13258/13258 [3:24:55<00:00,  1.08it/s]  \n",
-      "100%|██████████| 13258/13258 [4:33:38<00:00,  1.24s/it]  \n",
-      "100%|██████████| 13258/13258 [4:48:06<00:00,  1.30s/it]  \n",
-      "100%|██████████| 13258/13258 [5:55:12<00:00,  1.61s/it]  \n",
-      "100%|██████████| 13258/13258 [2:27:15<00:00,  1.50it/s]  \n",
-      "100%|██████████| 13258/13258 [6:23:37<00:00,  1.74s/it]      \n",
-      "100%|██████████| 13258/13258 [2:23:38<00:00,  1.54it/s]  \n",
-      "100%|██████████| 13258/13258 [2:44:46<00:00,  1.34it/s]  \n",
-      "100%|██████████| 13258/13258 [55:08<00:00,  4.01it/s]  \n",
-      "100%|██████████| 13258/13258 [1:03:42<00:00,  3.47it/s]  \n",
-      "100%|██████████| 13258/13258 [1:24:45<00:00,  2.61it/s]  \n",
-      "100%|██████████| 13258/13258 [2:04:25<00:00,  1.78it/s]  \n",
-      "100%|██████████| 13258/13258 [32:20<00:00,  6.83it/s]  \n",
-      "100%|██████████| 13258/13258 [45:04<00:00,  4.90it/s]  \n",
-      "100%|██████████| 13258/13258 [1:25:00<00:00,  2.60it/s]  \n",
-      "100%|██████████| 13258/13258 [1:49:10<00:00,  2.02it/s]  \n",
-      "100%|██████████| 13258/13258 [2:46:55<00:00,  1.32it/s]  \n",
-      "100%|██████████| 13258/13258 [5:28:39<00:00,  1.49s/it]      \n",
-      "100%|██████████| 13258/13258 [3:12:05<00:00,  1.15it/s]  \n",
-      "100%|██████████| 13258/13258 [3:37:13<00:00,  1.02it/s]  \n",
-      "100%|██████████| 13258/13258 [1:01:01<00:00,  3.62it/s]\n",
-      "100%|██████████| 13258/13258 [1:10:03<00:00,  3.15it/s]  \n",
-      "100%|██████████| 13258/13258 [1:25:08<00:00,  2.60it/s]  \n",
-      "100%|██████████| 13258/13258 [1:53:06<00:00,  1.95it/s]  \n",
-      "100%|██████████| 13258/13258 [36:10<00:00,  6.11it/s]  \n",
-      "100%|██████████| 13258/13258 [44:45<00:00,  4.94it/s]  \n",
-      "100%|██████████| 13258/13258 [59:25<00:00,  3.72it/s]  \n",
-      "100%|██████████| 13258/13258 [1:27:15<00:00,  2.53it/s]  \n",
-      "100%|██████████| 13258/13258 [22:56<00:00,  9.63it/s]  \n",
-      "100%|██████████| 13258/13258 [35:03<00:00,  6.30it/s]  \n",
-      "100%|██████████| 13258/13258 [2:59:44<00:00,  1.23it/s]      \n",
-      "100%|██████████| 13258/13258 [2:03:50<00:00,  1.78it/s]  \n",
-      "100%|██████████| 13258/13258 [4:55:44<00:00,  1.34s/it]  \n",
-      "100%|██████████| 13258/13258 [6:05:51<00:00,  1.66s/it]  \n",
-      "100%|██████████| 13258/13258 [5:37:03<00:00,  1.53s/it]  \n",
-      "100%|██████████| 13258/13258 [2:47:59<00:00,  1.32it/s]  \n",
-      "100%|██████████| 13258/13258 [48:16<00:00,  4.58it/s] \n",
-      "100%|██████████| 13258/13258 [55:33<00:00,  3.98it/s]  \n",
-      "100%|██████████| 13258/13258 [1:53:19<00:00,  1.95it/s]  \n",
-      "100%|██████████| 13258/13258 [2:15:27<00:00,  1.63it/s]  \n",
-      "100%|██████████| 13258/13258 [42:57<00:00,  5.14it/s]  \n",
-      " 93%|█████████▎| 12314/13258 [53:20<01:33, 10.15it/s]  "
+      "100%|██████████| 13258/13258 [17:05:07<00:00,  4.64s/it]        \n"
+     ]
+    },
+    {
+     "ename": "OperationalError",
+     "evalue": "database is locked",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 21\u001b[0m\n\u001b[0;32m      8\u001b[0m strategy \u001b[39m=\u001b[39m QuantitativeMomentum(\n\u001b[0;32m      9\u001b[0m     database_name\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mdata/MarketHistoricalData.db\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     10\u001b[0m     tickers\u001b[39m=\u001b[39muniverse,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     13\u001b[0m     firms_held\u001b[39m=\u001b[39mfirms_held\n\u001b[0;32m     14\u001b[0m )\n\u001b[0;32m     16\u001b[0m equity_timeseries \u001b[39m=\u001b[39m backtester\u001b[39m.\u001b[39mbacktest(\n\u001b[0;32m     17\u001b[0m     strategy\u001b[39m=\u001b[39mstrategy,\n\u001b[0;32m     18\u001b[0m     rebalance_period\u001b[39m=\u001b[39mrebalance\n\u001b[0;32m     19\u001b[0m )\n\u001b[1;32m---> 21\u001b[0m equity_timeseries\u001b[39m.\u001b[39;49mto_sql(_strategy_table_convention(\n\u001b[0;32m     22\u001b[0m     look_back\u001b[39m=\u001b[39;49mlook_back,\n\u001b[0;32m     23\u001b[0m     lottery_window\u001b[39m=\u001b[39;49mlottery_window,\n\u001b[0;32m     24\u001b[0m     rebalance\u001b[39m=\u001b[39;49mrebalance,\n\u001b[0;32m     25\u001b[0m     firms_held\u001b[39m=\u001b[39;49mfirms_held\n\u001b[0;32m     26\u001b[0m ),\n\u001b[0;32m     27\u001b[0m                          conn,\n\u001b[0;32m     28\u001b[0m                          if_exists\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mreplace\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m     29\u001b[0m                          index\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n",
+      "File \u001b[1;32mc:\\Users\\neili\\Desktop\\Strategy_Backtester\\venv\\lib\\site-packages\\pandas\\core\\generic.py:2878\u001b[0m, in \u001b[0;36mNDFrame.to_sql\u001b[1;34m(self, name, con, schema, if_exists, index, index_label, chunksize, dtype, method)\u001b[0m\n\u001b[0;32m   2713\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   2714\u001b[0m \u001b[39mWrite records stored in a DataFrame to a SQL database.\u001b[39;00m\n\u001b[0;32m   2715\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   2874\u001b[0m \u001b[39m[(1,), (None,), (2,)]\u001b[39;00m\n\u001b[0;32m   2875\u001b[0m \u001b[39m\"\"\"\u001b[39;00m  \u001b[39m# noqa:E501\u001b[39;00m\n\u001b[0;32m   2876\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mio\u001b[39;00m \u001b[39mimport\u001b[39;00m sql\n\u001b[1;32m-> 2878\u001b[0m \u001b[39mreturn\u001b[39;00m sql\u001b[39m.\u001b[39;49mto_sql(\n\u001b[0;32m   2879\u001b[0m     \u001b[39mself\u001b[39;49m,\n\u001b[0;32m   2880\u001b[0m     name,\n\u001b[0;32m   2881\u001b[0m     con,\n\u001b[0;32m   2882\u001b[0m     schema\u001b[39m=\u001b[39;49mschema,\n\u001b[0;32m   2883\u001b[0m     if_exists\u001b[39m=\u001b[39;49mif_exists,\n\u001b[0;32m   2884\u001b[0m     index\u001b[39m=\u001b[39;49mindex,\n\u001b[0;32m   2885\u001b[0m     index_label\u001b[39m=\u001b[39;49mindex_label,\n\u001b[0;32m   2886\u001b[0m     chunksize\u001b[39m=\u001b[39;49mchunksize,\n\u001b[0;32m   2887\u001b[0m     dtype\u001b[39m=\u001b[39;49mdtype,\n\u001b[0;32m   2888\u001b[0m     method\u001b[39m=\u001b[39;49mmethod,\n\u001b[0;32m   2889\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\neili\\Desktop\\Strategy_Backtester\\venv\\lib\\site-packages\\pandas\\io\\sql.py:769\u001b[0m, in \u001b[0;36mto_sql\u001b[1;34m(frame, name, con, schema, if_exists, index, index_label, chunksize, dtype, method, engine, **engine_kwargs)\u001b[0m\n\u001b[0;32m    764\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m(\n\u001b[0;32m    765\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39mframe\u001b[39m\u001b[39m'\u001b[39m\u001b[39m argument should be either a Series or a DataFrame\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    766\u001b[0m     )\n\u001b[0;32m    768\u001b[0m \u001b[39mwith\u001b[39;00m pandasSQL_builder(con, schema\u001b[39m=\u001b[39mschema, need_transaction\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m) \u001b[39mas\u001b[39;00m pandas_sql:\n\u001b[1;32m--> 769\u001b[0m     \u001b[39mreturn\u001b[39;00m pandas_sql\u001b[39m.\u001b[39mto_sql(\n\u001b[0;32m    770\u001b[0m         frame,\n\u001b[0;32m    771\u001b[0m         name,\n\u001b[0;32m    772\u001b[0m         if_exists\u001b[39m=\u001b[39mif_exists,\n\u001b[0;32m    773\u001b[0m         index\u001b[39m=\u001b[39mindex,\n\u001b[0;32m    774\u001b[0m         index_label\u001b[39m=\u001b[39mindex_label,\n\u001b[0;32m    775\u001b[0m         schema\u001b[39m=\u001b[39mschema,\n\u001b[0;32m    776\u001b[0m         chunksize\u001b[39m=\u001b[39mchunksize,\n\u001b[0;32m    777\u001b[0m         dtype\u001b[39m=\u001b[39mdtype,\n\u001b[0;32m    778\u001b[0m         method\u001b[39m=\u001b[39mmethod,\n\u001b[0;32m    779\u001b[0m         engine\u001b[39m=\u001b[39mengine,\n\u001b[0;32m    780\u001b[0m         \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mengine_kwargs,\n\u001b[0;32m    781\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\neili\\Desktop\\Strategy_Backtester\\venv\\lib\\site-packages\\pandas\\io\\sql.py:2378\u001b[0m, in \u001b[0;36mSQLiteDatabase.to_sql\u001b[1;34m(self, frame, name, if_exists, index, index_label, schema, chunksize, dtype, method, engine, **engine_kwargs)\u001b[0m\n\u001b[0;32m   2367\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mcol\u001b[39m}\u001b[39;00m\u001b[39m (\u001b[39m\u001b[39m{\u001b[39;00mmy_type\u001b[39m}\u001b[39;00m\u001b[39m) not a string\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   2369\u001b[0m table \u001b[39m=\u001b[39m SQLiteTable(\n\u001b[0;32m   2370\u001b[0m     name,\n\u001b[0;32m   2371\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   2376\u001b[0m     dtype\u001b[39m=\u001b[39mdtype,\n\u001b[0;32m   2377\u001b[0m )\n\u001b[1;32m-> 2378\u001b[0m table\u001b[39m.\u001b[39;49mcreate()\n\u001b[0;32m   2379\u001b[0m \u001b[39mreturn\u001b[39;00m table\u001b[39m.\u001b[39minsert(chunksize, method)\n",
+      "File \u001b[1;32mc:\\Users\\neili\\Desktop\\Strategy_Backtester\\venv\\lib\\site-packages\\pandas\\io\\sql.py:914\u001b[0m, in \u001b[0;36mSQLTable.create\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    912\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mif_exists\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is not valid for if_exists\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    913\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 914\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_execute_create()\n",
+      "File \u001b[1;32mc:\\Users\\neili\\Desktop\\Strategy_Backtester\\venv\\lib\\site-packages\\pandas\\io\\sql.py:2052\u001b[0m, in \u001b[0;36mSQLiteTable._execute_create\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   2050\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpd_sql\u001b[39m.\u001b[39mrun_transaction() \u001b[39mas\u001b[39;00m conn:\n\u001b[0;32m   2051\u001b[0m     \u001b[39mfor\u001b[39;00m stmt \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtable:\n\u001b[1;32m-> 2052\u001b[0m         conn\u001b[39m.\u001b[39;49mexecute(stmt)\n",
+      "\u001b[1;31mOperationalError\u001b[0m: database is locked"
      ]
     }
    ],
